--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,9 +10,9 @@
       <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
       <h2>Riley DuBord's Record Shop</h2>
     </header>
-    <main>
+    <div class="main">
       <p>Look at my cool music page.</p>
-    </main>
+    </div>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
