--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <header>
-      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-      <h2>Riley DuBord's Record Shop</h2>
-    </header>
-    <div class="main">
-      <p>Look at my cool music page.</p>
-    </div>
+    <!-- <div class="background-container"> -->
+      <!-- <div class="container"> -->
+        <div class="header">
+          <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+          <h2>Riley DuBord's Record Shop</h2>
+        </div>
+        <div class="main">
+          <p>Look at my cool music page.</p>
+        </div>
+      <!-- </div> -->
+    <!-- </div> -->
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
